[gd_scene load_steps=2 format=2]

[ext_resource path="res://UIcomponents/Pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Overlay" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -60.0
margin_right = 50.0
margin_bottom = 46.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_left = 14.0
margin_top = 19.0
margin_right = 83.0
margin_bottom = 87.0

[node name="Continue" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
text = "Continue"

[node name="Retry" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
text = "Retry"

[node name="Menu" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
text = "Menu"

[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
